Fixed Location of Service Names Chart
Moved the Service Names Chart down so it no longer overlaps with other elements.

--- a/Project 2/css/style.css
+++ b/Project 2/css/style.css
@@ -83,3 +83,9 @@ path.line {
   top: 570px;
   left: 830px;
 }
+
+#servicenames {
+  position: absolute;
+  top: 950px;
+  left: 0px;
+}
